# mn_slack_logger

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: main.yml
mn_slack_logger/: __init__.py  slack_log.py
mn_slack_logger.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_slack_logger.py
